# STRique

./: .dockerignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  mkdocs.yml  requirements.txt  setup.py
STRique_lib/: fast5Index.py
configs/: STRique.json  c9orf72.json  repeat_config.tsv
data/: c9orf72.fa  c9orf72.sam
docs/: citation.md  index.md  license.md  release-notes.md
docs/examples/: intro.md
docs/installation/: docker.md  prerequisites.md  src.md  test.md
models/: r9_4_450bps.model  r9_4_450bps_mCpG.model  template_median68pA6mer.model
scripts/: STRique.py  STRique_test.py  fast5Index.py  fast5Masker.py  fast5Reader.py  repetition.py  samIndex.py
src/: CMakeLists.txt  align_raw.h  pyalign.cpp  score_distance.h
tests/data/: c9orf72.fast5
